--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,245 +1,118 @@
-*{
-    box-sizing:border box;
-}
-
 
 body{
-    
+    background-image: url(../images/hypnotize.png);
     font-family: 'Comfortaa', cursive;
-    color:#777777;
-    background-color: #4aaaa5;
- 
 }
 
-header{
+
+.navbar-brand{
+width:250px;
+height:80px;
+text-align: center;
+background-color: #4aaaa5;
+color: #ffffff;
+margin-left:50px;
+padding:0px;
+
+}
+
+
+.navbar{
+    
     background-color:#e6e7dc;
-    height: 70px;
- 
-}
-
-.top{
-   width:960px;
-   height:30px;
-   margin: 0 auto;
- 
-}
-
-#name{
-    background-color: #4aaaa5;
-    width: 20%;
-    height: 100%;
-    color:white;   
-    padding: 20px; 
-    float: left;
- 
-}
-
-
-h1{
-    font-family: 'Nunito', sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    text-transform: lowercase;
-    letter-spacing: .5px;
-    text-align: center;
-    
-         
-}
-
-nav{
-    
-    width: 70%;
-    height: 30px;
-    text-align: right;
-    font-size: 15px;
-    padding:20px;
-    margin:0 auto;
-    float: right;
-     
-}
-
-a:link{
-    clear: both;
-  
-    color:rgb(75, 61, 130);
-}
-
-.wrapper{
-   
-   margin:0 auto;
-   height: 100%;
-   width:auto;
-   padding: 2%;
-   background-color: #4aaaa5;
-   background-image:url("../images/hypnotize.png") ;
-
-}
-
-.container{
     width:100%;
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 30px;
-    background-color: rgb(230, 231, 220,.7);
-    line-height: 150%;
-    height:730px;
-}
- 
-hr {
-    display: block;
-    border-top: 3px solid #ccc;
-    margin: 0 auto;
-  
+    height: 100%;
+    padding:0px;
+    font-family: 'Comfortaa', cursive;
+
+       
+ }
+
+
+.nav-item,
+.nav-link{
+     color: #777771;
+
 }
 
-h2{
-    font-weight:500;
-    font-size: 30px;
-    text-align: left;
-    margin-bottom:30px;
-   font-family: 'Nunito', sans-serif;
-   padding:20px;
-}
 
-p{
-    padding:5px;
-}
 
+section,
+.row-1,
+.row-2{
+background-color:#e6e7dc;
+color: #777771;
+padding:10px;
+margin-top: 20px;
+font-family: 'Comfortaa', cursive;
+
+}
 
 #headshot{
-    width: 200px;
-    height: 200px;
-    padding: 10px;
-    margin-top:7px;
-    margin-right:10px;
+    width:230px;
+    height:230px;
+    margin-bottom: 10px;
+    margin-right:20px;
+    float: left;
     border-style: dotted;
-    border-width: 3px;
-    border-radius: 50%;
-    float: left;   
-   
-}
-
-#copyright{
-   
-    width:100%;
-    background-color: #666666;
-    color:white;
-              
+   padding:10px;
+ 
 }
 
 
-/* Footer is in different spot for contact page 
-vs about and portfolio--refer back to fix
-*/
+hr{
+    width:95%;
+   }
 
 
-footer{
+
+.row-4{
     clear: both;
-    width:960px;
-    height:100%;
-    margin:0px auto;
-    text-align: center;
-    padding:15px;
-    background-color: #666666;
-    position:relative;
-    border-top: 8px; solid #4aaaa5;
-}
-
-/*
-To Follow: styling for form
-*/
-
-input[type=text], select {
-    width: 100%;
-    /* padding: 12px 40px; */
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 20px;
-    resize: vertical;
-}
-
-input[type=submit] {
-    width: 100%;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 20px;
-}
-
-input[type=submit]:hover {
-    background-color: rgb(75, 61, 130);
-}
-
-#form {
-    padding: 30px;
-    margin:0px auto;
-}
-
-/*To Follow: styling for Portfolio*/
-
-.gallery {
-    margin: 20px 0 25px;
-    float: left;
-    width: 274px;
+    background-color:#4aaaa5;
+   padding-top: 15px;
     position: relative;
-    overflow: auto;
+    margin-top: 20px;
 }
 
-.gallery:nth-child(even){
-    margin-right: 40px;
-}
-   
 
-
-.gallery img {
-    width: 100%;
-    border: 0 none;
-    opacity: .8;
-  
-}
-
-.auth-image{
-    width: 200px;
-    height: auto;
-    margin-top: 10px;
-    float: left;
-    margin-right: 25px;
-}
-
-.desc{
-    border-bottom: 0;
-    background: #4aaaa5;
-    color: white;
+.row-3,
+.footer{
+    background-color:#777777;
     text-align: center;
-    bottom:20px;
-    padding: 15px;
-    position: absolute;
+    color:#ffffff;
+    font-size: 17px;
     width:100%;
-    line-height: 30px;
-    margin-bottom: 0;
-    font-weight: 300;
+    padding:1%;
+    position:relative;
+
 }
 
 
 
+@media (max-width: 576px){
+    #headshot{
+        margin:0 auto;
+        width:100%;
+        height:auto;
+        float:left;
+        padding:0;
+        margin-bottom: 20px;
+    }
 
-/* Icons */
-#fa fa-address-card{
+    h2{
+        text-align:center;
+    }
 
+    .auth-image{
+        width:100%;
+        height:auto;
+        float:left;
+    }
+
+    .gallery{
+        width:100%;
+        margin:0 auto;
+        float: left;
+        padding:0px;
+    }
 }
