--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,29 +4,35 @@ body{
     font-family: 'Comfortaa', cursive;
 }
 
+.container-fluid{
+
+    width:100%;
+    height:100%;
+    margin:0%;
+}
+
+
 
 .navbar-brand{
 width:250px;
-height:80px;
 text-align: center;
 background-color: #4aaaa5;
 color: #ffffff;
-margin-left:50px;
-padding:0px;
+padding:1%;
+
 
 }
 
 
-.navbar{
+
+nav{
     
     background-color:#e6e7dc;
     width:100%;
-    height: 100%;
-    padding:0px;
     font-family: 'Comfortaa', cursive;
-
-       
+     
  }
+
 
 
 .nav-item,
@@ -37,16 +43,52 @@ padding:0px;
 
 
 
-section,
+
+
+
+
+#fa{
+    padding-top:3%;
+    padding-left:0;
+}
+
+
+
+
+
+h2{
+   padding-top:40px;
+    padding-left:5%;
+   margin: 0 auto;
+   color: #777771;background-color:#e6e7dc;
+}
+
+
+
+
+.container{
+
+background-color:#e6e7dc;
+color: #777771;
+margin-top:3%;
+margin-bottom:5%;
+
+}
+
+
+
+
 .row-1,
 .row-2{
 background-color:#e6e7dc;
 color: #777771;
 padding:10px;
-margin-top: 20px;
 font-family: 'Comfortaa', cursive;
+margin: 10 auto;
 
 }
+
+
 
 #headshot{
     width:230px;
@@ -60,6 +102,8 @@ font-family: 'Comfortaa', cursive;
 }
 
 
+
+
 hr{
     width:95%;
    }
@@ -71,7 +115,6 @@ hr{
     background-color:#4aaaa5;
    padding-top: 15px;
     position: relative;
-    margin-top: 20px;
 }
 
 
@@ -82,12 +125,70 @@ hr{
     color:#ffffff;
     font-size: 17px;
     width:100%;
-    padding:1%;
-    position:relative;
+    padding:10px;
+    position: relative;
+  margin:0 auto;
+
 
 }
 
+/* ----Edits for Portfolio---- */
 
+.auth-image{
+    width:80%;
+    height:auto;
+    float:left;
+    margin:0 auto;
+    margin-left:30px;
+ 
+}
+
+.gallery{
+    width: 100%;
+    float: left;
+    padding:10px;
+    margin:0 auto;
+    margin-left:2%;
+    margin-bottom:5%;
+    margin-top:5%;
+   
+}
+
+/* caption on image */
+.desc {
+    padding: 5px;
+    text-align: center;
+    color: white;
+    background-color: #4aaaa5;
+    margin-left:30px;
+    width:80%;
+    float:left;
+   
+   
+}
+
+
+
+/* --------Contact Edits------------ */
+
+form{
+   padding-top: 2%;
+    padding-bottom:10%;
+    margin:0px auto;
+    background-color:#e6e7dc;
+    color: #777771;
+    width:80%;
+}
+
+.btn-outline{
+    background-color: #4aaaa5;
+    color: white;
+    
+}
+
+
+
+/*------responsive------- */
 
 @media (max-width: 576px){
     #headshot{
@@ -103,16 +204,6 @@ hr{
         text-align:center;
     }
 
-    .auth-image{
-        width:100%;
-        height:auto;
-        float:left;
-    }
-
-    .gallery{
-        width:100%;
-        margin:0 auto;
-        float: left;
-        padding:0px;
-    }
+   
 }
+
